@@ -1021,14 +1021,7 @@ class BaseHandlerAdapter(object):
         if kwargs:
             args = ()
 
-        try:
-            return self.handler(request, *args, **kwargs)
-        except TypeError:
-            from warnings import warn
-            warn(DeprecationWarning('Functions now must receive '
-                '(request, *args, **kwargs)'), stacklevel=1)
-            # This was the previous behavior for functions.
-            return self.handler(request, response)
+        return self.handler(request, *args, **kwargs)
 
 
 class WebappHandlerAdapter(BaseHandlerAdapter):
